[package]
name = "license-verify"
version = "1.0.0"
edition = "2021"
description = "License code verification SDK for AuthorizationTool (ECDSA P-256)"

[features]
std = []

[dependencies]
p256 = { version = "0.13", features = ["ecdsa", "arithmetic", "sha256"] }
base64 = "0.22"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
